<resources>
    <string name="app_name">PlaceToPay</string>

    <string name="menu_hisotry">Lista de pagos</string>
    <string name="menu_sign_out">Cerrar sesión</string>

    <string name="home_message_error">Ha ocurrido un problema consultando el listado de productos.</string>

    <string name="product_detail_buy">Comprar</string>

    <string name="pay_product_purchase_details">Detalles de la compra</string>
    <string name="pay_product_name">Nombre del producto</string>
    <string name="pay_product_price">Precio del producto</string>
    <string name="pay_product_payer_info">Datos del tarjetahabiente</string>
    <string name="pay_product_payer_name">Nombre</string>
    <string name="pay_product_payer_email">Correo electrónico</string>
    <string name="pay_product_payer_cellphone">Número celular</string>
    <string name="pay_product_credit_card_info">Datos de la tarjeta de crédito</string>
    <string name="pay_product_credit_card_number">Número tarjeta de crédito</string>
    <string name="pay_product_credit_card_expiration_date">Fecha de vencimiento (MM/AA)</string>
    <string name="pay_product_credit_card_cvv_code">Código de seguridad (CVV)</string>
    <string name="pay_product_process_payment">Procesar pago</string>
    <string name="pay_product_message_validateion">Debes llenar todos los campos.</string>
    <string name="pay_product_message_error">Ha ocurrido un problema procesando el pago. Por favor valida que todos los campos estén diligenciados correctamente.</string>

    <string name="payment_detail_title">Información de la transacción</string>
    <string name="payment_detail_status">Estado:</string>
    <string name="payment_detail_message">Mensaje:</string>
    <string name="payment_detail_reference">Referencia:</string>
    <string name="payment_detail_price">Total pagado:</string>
    <string name="payment_detail_currency">Moneda:</string>
    <string name="payment_detail_date">Fecha:</string>
    <string name="payment_detail_franchise">Franquicia:</string>
    <string name="payment_detail_refresh_status">Actualizar estado</string>
    <string name="payment_detail_message_sucess">El estado de la transacción se ha actualizado exitosamente.</string>
    <string name="payment_detail_message_error">Ha ocurrido un problema al intentar actualizar el estado de la transacción. Por favor inténtelo de nuevo.</string>

    <string name="payment_list_title">Listado de pagos</string>
    <string name="payment_list_delete">Eliminar</string>
    <string name="payment_list_get_message_error">Ha ocurrido un problema consultando el listado de pagos.</string>
    <string name="payment_list_delete_message_error">No se pudo eliminar el pago, inténtelo nuevamente.</string>
    <string name="payment_list_delete_message_success">Registro eliminado exitosamente.</string>

    <string name="dialog_message_accept">Aceptar</string>
    <string name="dialog_loading_text">Espere un momento por favor...</string>
</resources>
