<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.placetopay.commerce.viewmodel.PaymentDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        tools:context=".view.PaymentDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewProductDetailBack"
                android:layout_width="@dimen/drawable_icon_button_size_large"
                android:layout_height="@dimen/drawable_icon_button_size_large"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="@{()->model.setCloseActivity()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_back" />

            <TextView
                android:id="@+id/textViewProductDetailName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_detail_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_big_size"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProductDetailBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewProductDetailBack"
                app:layout_constraintTop_toTopOf="@+id/imageViewProductDetailBack" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_status"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textView_big_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProductDetailBack" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/payment_detail_message"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_date"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_reference"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_price"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_currency"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payment_detail_franchise"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPaymentDetailRefresh"
                style="@style/RaisedButtonYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{()->model.onRefreshClick()}"
                android:text="@string/payment_detail_refresh_status"
                android:visibility="@{model.getTransaction().internalReference != null}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewPaymentDetailStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={model.getTransaction().status}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textView_big_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textViewPaymentDetailMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@={model.getTransaction().message}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewPaymentDetailDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@={model.getTransaction().date}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewPaymentDetailReference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@={model.getTransaction().reference}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewPaymentDetailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={model.getTransaction().price}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewPaymentDetailCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={model.getTransaction().currency}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewPaymentDetailFranchise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@={model.getTransaction().franchiseName}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>