<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="position"
            type="Integer" />

        <variable
            name="model"
            type="com.placetopay.commerce.viewmodel.PaymentListViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="@{()->model.setTransactionSelected(position)}"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/payment_detail_status"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCardPaymentStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{model.getTransactionAtPosition(position).status}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textView_medium_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/payment_detail_reference"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/payment_detail_date"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintBottom_toTopOf="@+id/buttonCardPaymentDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textViewCardPaymentReference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{model.getTransactionAtPosition(position).reference}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textViewCardPaymentDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{model.getTransactionAtPosition(position).date}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textView_medium_size"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                app:layout_constraintVertical_bias="1.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCardPaymentDelete"
                style="@style/RaisedButtonYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{()->model.deleteTransaction(model.getTransactionAtPosition(position).id)}"
                android:text="@string/payment_list_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>